--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "mex.doc.tar.xz": 48aef09970c7ab8e4866f66bdd7071538f6e7151
-  "mex.source.tar.xz": b842b36c5edd325fae6c3facfa8539d141d9c001
-  "mex.tar.xz": 97644e45a6b7990611f7948ad303ecc65fcf2b13
+  mex.doc.r58661.tar.xz: a09fe97fc8cd79ae7698e7b16bbc5a3402679c59
+  mex.r58661.tar.xz: dd37bf2bf179d5b0e77b57164e5ecca0204aff6f
+  mex.source.r58661.tar.xz: abd72b3e81d8cbbec1a7601892f503ff5f93411c
